# KCC2026

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run_experiment.py
data/few_shot_examples/: npc_guard.xml  smart_thermostat.xml
experiments/configs/: _domains.yaml  default.yaml  llama.yaml
experiments/human_eval/: human_eval_template.csv
experiments/human_eval/gpt4/: sample_index.csv
experiments/human_eval/gpt4/sampled_bts/: 000_proposed_with_few_shot_weather_environment_rep3.xml  001_few_shot_generic_airspace_obstacle_rep0.xml  002_proposed_elevator_car_rep3.xml  003_zero_shot_factory_equipment_rep0.xml  004_few_shot_generic_human_worker_rep8.xml  005_proposed_ground_target_rep0.xml  006_proposed_with_few_shot_conveyor_system_rep9.xml  007_proposed_with_few_shot_elevator_car_rep4.xml  008_zero_shot_airspace_obstacle_rep5.xml  009_zero_shot_elevator_car_rep7.xml  010_few_shot_generic_elevator_car_rep9.xml  011_proposed_other_agv_rep5.xml
experiments/human_eval/llama/: sample_index.csv
experiments/human_eval/llama/sampled_bts/: 000_proposed_with_few_shot_weather_environment_rep0.xml  001_few_shot_generic_airspace_obstacle_rep0.xml  002_proposed_building_system_rep1.xml  003_zero_shot_conveyor_system_rep7.xml  004_few_shot_generic_conveyor_system_rep2.xml  009_zero_shot_elevator_car_rep3.xml  (+6 more)
scripts/: analyze.py  build_loader.sh  compare_human_eval.py  figures.py  figures_appendix.py  sample_for_human_eval.py
src/generators/: bt_generator.py  llm_client.py
src/prompts/: templates.py
src/utils/: logging.py
tests/: test_bt_generator.py
